--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,6 @@
 
 :root {
-    --white: #ffffff;
+    --white: #FFFFFF;
     --black: #000000;
     --primary: #FF0000;
     --primary-light: #FF00004D;
@@ -12,11 +12,59 @@
     --gray-6: #00000040;
     --gray-7: #00000066;
     --gray-8: #28272C;
-    --max-width: 68rem;
+    --max-width: 70rem;
 }
 
 html, body {
     font-size: 16px;
+}
+
+.btn {
+    text-decoration: none;
+    font-weight: 700;
+    line-height: 1.375;
+    color: var(--primary);
+    background-color: var(--white);
+    display: inline-block;
+    min-width: 11.375rem;
+    padding: 1.375rem;
+    border-radius: 2.5rem;
+    transition: all 400ms ease-in-out;
+}
+
+.btn:hover {
+    color: var(--white);
+    background-color: var(--primary);
+}
+
+.btn--icon {
+    width: 3.4375rem;
+    height: 3.4375rem;
+    padding: 0;
+    min-width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-arrow {
+    fill: var(--white);
+    transition: fill 400ms ease-in-out;
+}
+
+.btn--icon:hover .icon-arrow {
+    fill: var(--primary);
+}
+
+.btn--sm {}
+.btn--primary {
+    color: var(--white);
+    background-color: var(--primary);
+}
+
+.btn--primary:hover{
+    color: var(--primary);
+    background-color: var(--white);
 }
 
 .intro {
@@ -25,75 +73,119 @@ html, body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
+}
 
+.intro .intro__scroll {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 20%);
 }
 
 .header {
     background-color: var(--gray-6);
     border-bottom: 0.125rem solid var(--gray-5);
 }
+
 .header .header__inner {
     width: 100%;
     max-width: var(--max-width);
+    padding-inline: 1rem;
+    box-sizing: border-box;
     margin-inline: auto;
     display: flex;
     justify-content: space-between;
 }
 
-
 .logo {
     text-decoration: none;
     text-transform: uppercase;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
     font-weight: 700;
     font-size: 2.1875rem;
     line-height: 1.34;
     color: var(--white);
     display: flex;
     align-items: center;
-
 }
+
 .logo .logo__img {
     width: 1.9375rem;
     height: auto;
-    margin-top: -0.25rem;
+    margin-top: -.25rem;
     margin-right: 0.625rem;
-
 }
-.logo .logo__text {}
-.logo .logo__text--primary {
-    margin-right: 0.3125rem;
+
+.logo .logo__text {
+}
+
+.logo .logo__text.logo__text--primary {
+    margin-right: .3125rem;
     color: var(--primary);
     font-weight: 800;
-
 }
-
 
 .mainMenu {
     display: flex;
     justify-content: flex-end;
-
 }
+
 .mainMenu .mainMenu__item {
     color: var(--white);
     text-decoration: none;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
     font-weight: 700;
     text-transform: uppercase;
     padding: 2.0625rem 2.5rem;
     display: inline-block;
-    line-height: 1.375rem;
-
+    line-height: 1.375;
 }
-.mainMenu .mainMenu__item.mainMenu__item--active {
+
+.mainMenu .mainMenu__item.mainMenu__item--active,
+.mainMenu .mainMenu__item:hover {
     background-color: var(--gray-5);
 }
 
+.hero {
+    color: var(--white);
+    text-align: center;
+    font-family: 'Nunito Sans', sans-serif;
+    width: 100%;
+    max-width: var(--max-width);
+    padding-inline: 1rem;
+    box-sizing: border-box;
+    margin-inline: auto;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: -5.5rem;
+}
 
-.hero {}
-.hero .hero__hdl {}
-.hero .hero__lead {}
-.hero .hero__wrapper {}
-.hero .hero__btn {}
-.hero .hero__btn.hero__btn--primary {}
-.hero .hero__btn.hero__btn--icon {}
+.hero .hero__hdl {
+    font-size: 5.625rem;
+    font-weight: 900;
+    line-height: 1;
+    text-shadow: 0 .1875rem .375rem var(--gray-6);
+    margin: 0 0 2rem 0;
+}
+
+.hero .hero__lead {
+    font-size: 1rem;
+    line-height: 1.375;
+    font-weight: 700;
+    margin: 0 0 3.375rem 0;
+}
+
+.hero .hero__wrapper {
+}
+
+.hero .hero__btn {
+
+}
+
+.hero .hero__btn.hero__btn--primary {
+    margin-right: 1.5625rem;
+}
+}
