--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,7 +18,40 @@
 html, body {
     font-size: 16px;
 }
+.hdl {
+    text-align: center;
+    font-size: 2.1875rem;
+    font-family: "Nuniti Sans", sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--black);
+    position: relative;
+}
+.hdl::before {
+    content: '';
+    width: 3.125rem;
+    height: .1875rem;
+    background-color: var(--primary);
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    transform: translate(-3.75rem, -50%);
+}
+.hdl::after {
+    content: '';
+    width: 3.125rem;
+    height: .1875rem;
+    background-color: var(--primary);
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    transform: translate(0.625rem, -50%);
+}
+.hdl--dark {
+    color: var(--white);
 
+
+}
 .btn {
     text-decoration: none;
     font-weight: 700;
@@ -30,6 +63,9 @@ html, body {
     padding: 1.375rem;
     border-radius: 2.5rem;
     transition: all 400ms ease-in-out;
+    font-family: "Nuniti Sans", sans-serif;
+    text-align: center;
+
 }
 
 .btn:hover {
@@ -56,7 +92,13 @@ html, body {
     fill: var(--primary);
 }
 
-.btn--sm {}
+.btn--sm {
+    padding: 0.625rem 0.6875rem;
+    min-width: 7.5rem;
+    font-size: 0.875rem;
+    line-height: ;
+
+}
 .btn--primary {
     color: var(--white);
     background-color: var(--primary);
@@ -188,4 +230,41 @@ html, body {
 .hero .hero__btn.hero__btn--primary {
     margin-right: 1.5625rem;
 }
+.main{ }
+.box {}
+.box .box__inner {
+    width: 100%;
+    max-width: var(--max-width);
+    box-sizing: border-box;
+    padding-inline: 1rem;
+    margin-inline: auto;
+}
+.cols {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 1rem;
+
+}
+.article {
+    font-family: "Nuniti Sans", sans-serif;
+    color: var(--gray-3);
+
+}
+.article .article__hdl {
+    text-transform: uppercase;
+    font-size: 1.1875rem;
+    line-height: 1.37;
+    font-weight: 500;
+    margin: 0, 0, 0.75rem, 0;
+
+}
+.article .article__img {
+    margin-bottom: 1.375rem;
+}
+.article .article__lead {
+    font-size: 0.875rem;
+    font-family: "Open sans", sans-serif;
+    font-weight: 300;
+    margin: 0 0 0.9375rem 0;
+    max-width: 16.25rem;
 }
