--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,6 +26,7 @@ html, body {
     text-transform: uppercase;
     color: var(--black);
     position: relative;
+    margin-bottom: 2.1875rem;
 }
 .hdl::before {
     content: '';
@@ -49,6 +50,7 @@ html, body {
 }
 .hdl--dark {
     color: var(--white);
+    margin-bottom: 4.6875rem;
 
 
 }
@@ -231,7 +233,16 @@ html, body {
     margin-right: 1.5625rem;
 }
 .main{ }
-.box {}
+.box {
+    padding-top: 3.75rem;
+    padding-bottom: 6.25rem;
+
+
+}
+.box--dark {
+    background-color: var(--gray-8);
+
+}
 .box .box__inner {
     width: 100%;
     max-width: var(--max-width);
@@ -267,4 +278,29 @@ html, body {
     font-weight: 300;
     margin: 0 0 0.9375rem 0;
     max-width: 16.25rem;
+}
+.service {
+    text-align: center;
+    max-width: 14.675rem;
+    margin-inline: auto;
+
+}
+.service .service__img {
+    margin-bottom: 1.375rem;
+}
+.service .service__hdl {
+    font-family: 'Nunito Sans', sans-serif;
+    color: var(--white);
+    text-transform: uppercase;
+    font-size: 1.1875rem;
+    line-height: 1.37;
+    font-weight: 500;
+    margin: 0 0 .75rem 0;
+}
+.service .service__lead {
+    color: var(--gray-2);
+    font-size: .875rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    margin: 0 0 .9375rem 0;
 }
