--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,3 @@
-
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -18,17 +17,19 @@
 html, body {
     font-size: 16px;
 }
+
 .hdl {
     text-align: center;
     font-size: 2.1875rem;
-    font-family: "Nuniti Sans", sans-serif;
+    color: var(--black);
+    font-family: 'Nunito Sans', sans-serif;
     font-weight: 700;
     text-transform: uppercase;
-    color: var(--black);
     position: relative;
     margin-bottom: 2.1875rem;
 }
-.hdl::before {
+
+.hdl::before, .hdl::after {
     content: '';
     width: 3.125rem;
     height: .1875rem;
@@ -38,22 +39,16 @@ html, body {
     top: 50%;
     transform: translate(-3.75rem, -50%);
 }
+
 .hdl::after {
-    content: '';
-    width: 3.125rem;
-    height: .1875rem;
-    background-color: var(--primary);
-    display: inline-block;
-    position: absolute;
-    top: 50%;
     transform: translate(0.625rem, -50%);
 }
+
 .hdl--dark {
     color: var(--white);
     margin-bottom: 4.6875rem;
-
-
 }
+
 .btn {
     text-decoration: none;
     font-weight: 700;
@@ -65,9 +60,8 @@ html, body {
     padding: 1.375rem;
     border-radius: 2.5rem;
     transition: all 400ms ease-in-out;
-    font-family: "Nuniti Sans", sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
     text-align: center;
-
 }
 
 .btn:hover {
@@ -95,24 +89,29 @@ html, body {
 }
 
 .btn--sm {
-    padding: 0.625rem 0.6875rem;
+    padding: .625rem .6875rem;
     min-width: 7.5rem;
-    font-size: 0.875rem;
-    line-height: ;
-
+    font-size: .875rem;
 }
+
 .btn--primary {
     color: var(--white);
     background-color: var(--primary);
 }
 
-.btn--primary:hover{
+.btn--primary:hover {
     color: var(--primary);
     background-color: var(--white);
 }
 
+.btn--outline {
+    border: 0.0625rem solid var(--primary);
+    box-shadow: 0 .1875rem .375rem var(--primary-light);
+    cursor: pointer;
+}
+
 .intro {
-    background-image: url(../images/intro.png);
+    background-image: url("../images/intro.png");
     min-height: 100vh;
     background-position: center;
     background-size: cover;
@@ -232,62 +231,76 @@ html, body {
 .hero .hero__btn.hero__btn--primary {
     margin-right: 1.5625rem;
 }
-.main{ }
+
+.main {
+}
+
 .box {
     padding-top: 3.75rem;
     padding-bottom: 6.25rem;
-
-
 }
+
 .box--dark {
     background-color: var(--gray-8);
-
 }
+
 .box .box__inner {
     width: 100%;
     max-width: var(--max-width);
-    box-sizing: border-box;
     padding-inline: 1rem;
+    box-sizing: border-box;
     margin-inline: auto;
 }
+
 .cols {
     display: flex;
-    justify-content: space-between;
     column-gap: 1rem;
-
+    justify-content: space-between;
 }
+
+.cols--wrapper {
+    width: 100%;
+    max-width: 56.5rem;
+    margin-inline: auto;
+    align-items: flex-start;
+}
+
 .article {
-    font-family: "Nuniti Sans", sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
     color: var(--gray-3);
-
 }
+
+.article .article__img {
+    margin-bottom: 1.375rem;
+}
+
 .article .article__hdl {
     text-transform: uppercase;
     font-size: 1.1875rem;
     line-height: 1.37;
     font-weight: 500;
-    margin: 0, 0, 0.75rem, 0;
+    margin: 0 0 .75rem 0;
+}
 
-}
-.article .article__img {
-    margin-bottom: 1.375rem;
-}
 .article .article__lead {
-    font-size: 0.875rem;
-    font-family: "Open sans", sans-serif;
+    font-size: .875rem;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    margin: 0 0 0.9375rem 0;
+    margin: 0 0 .9375rem 0;
     max-width: 16.25rem;
 }
+
+
 .service {
     text-align: center;
     max-width: 14.675rem;
     margin-inline: auto;
-
 }
+
 .service .service__img {
     margin-bottom: 1.375rem;
 }
+
 .service .service__hdl {
     font-family: 'Nunito Sans', sans-serif;
     color: var(--white);
@@ -297,10 +310,69 @@ html, body {
     font-weight: 500;
     margin: 0 0 .75rem 0;
 }
+
 .service .service__lead {
     color: var(--gray-2);
     font-size: .875rem;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     margin: 0 0 .9375rem 0;
+}
+
+
+.formPhoto {
+    width: 100%;
+}
+
+.contactForm {
+    display: flex;
+    flex-direction: column;
+}
+
+.contactForm .contactForm__group {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    margin-bottom: 1.25rem;
+    column-gap: .625rem;
+}
+
+.contactForm .contactForm__input {
+    border: 0.0625rem solid var(--gray-1);
+    border-radius: .5rem;
+    padding: .5rem .75rem;
+    font-size: 1rem;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 500;
+    color: var(--gray-4);
+    margin-bottom: 1.25rem;
+    outline: 0;
+    resize: none;
+}
+
+.contactForm .contactForm__input::placeholder {
+    font-size: 1rem;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 500;
+    color: var(--gray-2);
+}
+
+.contactForm .contactForm__lbl {
+    font-family: 'Open Sans', sans-serif;
+    font-size: .625rem;
+    line-height: 1.4;
+    color: var(--gray-2);
+    font-weight: 300;
+}
+
+.contactForm .contactForm__agreement {
+}
+
+.contactForm .contactForm__submit {
+    align-self: flex-end;
+}
+
+.contactForm .contactForm__input.contactForm__input--error {
+    border-color: var(--primary);
+    box-shadow: 0 .0625rem .375rem var(--primary-light);
 }
